[package]
name = "phat_rollup_anchor_ink_macro"
version = "0.0.1"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1.0.64"
fs2 = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.13.1"
unwrap = "1.2.1"
blake2 = "0.9"
heck = "0.3.1"
ink_ir = { version = "4.1.0-beta", default-features = false }
ink_primitives = { version = "4.1.0-beta", default-features = false }
synstructure = "0.12"

[dev-dependencies]

[lib]
path = "src/lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []